<?xml version="1.0"?>
<package>
  <name>yefan_description</name>
  <version>0.0.1</version>
  <description>The yefan description package</description>
  <maintainer email="mike.ivanou@gmail.com">Mike Ivanou</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
