<?xml version="1.0"?>
<package format="2">
    <name>yefan_msg</name>
    <version>1.0.0</version>
    <description>The yefan_msg package</description>
    <maintainer email="s.golousov@innopolis.ru">Svyatoslav Golousov</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>std_msgs</depend>
    <export>
        <cpp cflags="-I${prefix}/msg"/>
    </export>
</package>
